Updated java version